--- a/model-page/riya singh/model-page.html
+++ b/model-page/riya singh/model-page.html
@@ -35228,7 +35228,7 @@ return false;
   <div class="column">
     <a href="All-image/shumi (18).jpg"><img src="All-image/shumi (18).jpg" style="width:90%"></a>
     <a href="All-image/shumi (19).jpg"><img src="All-image/shumi (19).jpg" style="width:90%"></a>
-    
+    <a href="All-image/shumi (19).jpg"><img src="All-image/shumi (9).jpg" style="width:90%"></a>
   </div>
 </div></center></div>
 
