--- a/model-page/riya singh/model-page.html
+++ b/model-page/riya singh/model-page.html
@@ -35203,7 +35203,8 @@ return false;
 									<a href="upi://pay?pa=paytmqr28100505010113e9gpug4bbg@paytm&pn=VRAPPS.LIVE&am=2000&tn=VRApps" class="btn btn-maincolor">₹ 2000 PAY NOW</a>
 								</div>
 							</div>
-						</div><center><h4 id="IMAGE-COLLECTION" class="banner__title">IMAGE COLLECTION</h4><br>
+						</div>
+					</div><center><h4 id="IMAGE-COLLECTION" class="banner__title">IMAGE COLLECTION</h4><br>
 
 <!-- Photo Grid -->
 <div class="row"> 
