--- a/index.html
+++ b/index.html
@@ -3151,7 +3151,7 @@ Installation is very simple. Just copy the script below, everything between SCRI
 							<div class="owl-carousel" data-margin="30" data-responsive-lg="5" data-responsive-md="4" data-responsive-sm="3" data-responsive-xs="1" data-nav="" data-loop="true" data-autoplay="true">
 								<div class="vertical-item item-gallery content-absolute text-center ds">
 									<a  class="item-media  h-100 w-100 d-block" data-width="1080" data-height="1520">
-										<img src="PHOTO/MODEL-01.jpg" alt="img">
+										<img src="PHOTO/1st.jpg" alt="img">
 										<div class="media-links"></div>
 									</a>
 									<div class="item-content">
@@ -3206,7 +3206,7 @@ Installation is very simple. Just copy the script below, everything between SCRI
 								</div>
 								<div class="vertical-item item-gallery content-absolute text-center ds">
 									<a  class="item-media  h-100 w-100 d-block" data-width="1080" data-height="1520">
-										<img src="PHOTO/model-02.jpg" alt="img">
+										<img src="PHOTO/1st.jpg" alt="img">
 										<div class="media-links"></div>
 									</a>
 									<div class="item-content">
@@ -3261,7 +3261,7 @@ Installation is very simple. Just copy the script below, everything between SCRI
 								</div>
 								<div class="vertical-item item-gallery content-absolute text-center ds">
 									<a  class="item-media  h-100 w-100 d-block" data-width="1080" data-height="1520">
-										<img src="PHOTO/model-03.jpg" alt="img">
+										<img src="PHOTO/1st.jpg" alt="img">
 										<div class="media-links"></div>
 									</a>
 									<div class="item-content">
@@ -3316,7 +3316,7 @@ Installation is very simple. Just copy the script below, everything between SCRI
 								</div>
 								<div class="vertical-item item-gallery content-absolute text-center ds">
 								<a  class="item-media  h-100 w-100 d-block" data-width="1080" data-height="1520">
-										<img src="PHOTO/model-04.jpg" alt="img">
+										<img src="PHOTO/1st.jpg" alt="img">
 										<div class="media-links"></div>
 									</a>
 									<div class="item-content">
@@ -3371,7 +3371,7 @@ Installation is very simple. Just copy the script below, everything between SCRI
 								</div>
 								<div class="vertical-item item-gallery content-absolute text-center ds">
 									<a  class="item-media  h-100 w-100 d-block" data-width="1080" data-height="1520">
-										<img src="PHOTO/model-05.jpg" alt="img">
+										<img src="PHOTO/1st.jpg" alt="img">
 										<div class="media-links"></div>
 									</a>
 									<div class="item-content">
