--- a/index.html
+++ b/index.html
@@ -3531,7 +3531,7 @@ var x = setInterval(function() {
 
 										<li class="product type-product">
 											<a href="#">
-												<img src="PHOTO/MODEL-01.jpg" class="" alt="img">
+												<img src="PHOTO/popular-01.jpg" class="" alt="img">
 												<h2>Poonam Panday</h2>
 												<div class="star-rating">
 													<span style="width:80%">Rated <strong class="rating">4.50
@@ -3549,7 +3549,7 @@ var x = setInterval(function() {
 
 										<li class="product type-product">
 											<a href="#">
-												<img src="PHOTO/model-02.jpg" class="" alt="img">
+												<img src="PHOTO/popular-01.jpg" class="" alt="img">
 												<h2>Riya Shingh</h2>
 												<div class="star-rating">
 													<span style="width:80%">Rated <strong class="rating">4.50
@@ -3567,7 +3567,7 @@ var x = setInterval(function() {
 
 										<li class="product type-product">
 											<a href="#">
-												<img src="PHOTO/model-03.jpg" class="" alt="img">
+												<img src="PHOTO/popular-01.jpg" class="" alt="img">
 												<h2>Pooja chopda</h2>
 												<div class="star-rating">
 													<span style="width:80%">Rated <strong class="rating">4.50
