--- a/index.html
+++ b/index.html
@@ -3481,7 +3481,7 @@ Installation is very simple. Just copy the script below, everything between SCRI
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("may 20, 2023 12:00:00").getTime();
+var countDownDate = new Date("jan 01, 2023 12:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -3586,7 +3586,6 @@ var x = setInterval(function() {
 
 </ul></div></section>
 
-<CENTER><img src="PHOTO/toplogo-image.jpg"alt="ADS" width="100%" height=""></CENTER>
 
 <section class="ds casting s-py-70 s-py-lg-100 s-py-xl-150">
 				<div class="container">
@@ -3594,7 +3593,7 @@ var x = setInterval(function() {
 						<div class="col-xs-12 col-lg-10 offset-lg-1 mb-30">
 							<div class="d-flex media-item item-left">
 								<div class="item-media">
-									<img src="PHOTO/model-01.jpg" alt="img">
+									<img src="PHOTO/popular-01.jpg" alt="img">
 									<div class="media-links">
 										<a class="abs-link" title="" href="personal-modal-page.html"></a>
 									</div>
@@ -3625,7 +3624,7 @@ var x = setInterval(function() {
 						<div class="col-xs-12 col-lg-10 offset-lg-1 mb-30">
 							<div class="d-flex media-item item-right">
 								<div class="item-media">
-									<img src="PHOTO/model-02.jpg" alt="img">
+									<img src="PHOTO/popular-02.jpg" alt="img">
 									<div class="media-links">
 										<a class="abs-link" title="" href="personal-modal-page.html"></a>
 									</div>
@@ -3657,7 +3656,7 @@ var x = setInterval(function() {
 						<div class="col-xs-12 col-lg-10 offset-lg-1 mb-30">
 							<div class="d-flex media-item item-left">
 								<div class="item-media">
-									<img src="PHOTO/model-03.jpg" alt="img">
+									<img src="PHOTO/popular-03.jpg" alt="img">
 									<div class="media-links">
 										<a class="abs-link" title="" href="personal-modal-page.html"></a>
 									</div>
